<resources>
    <string name="app_name">Hospi</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remember_me">Remember me</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="doctor_call">Doctor Call</string>
    <string name="examinations">Examinations</string>
    <string name="clinic_visit">Clinic Visit</string>
    <string name="home_visit">Home Visit</string>
    <string name="book_clinic_appointment">Book Clinic Appointment</string>
    <string name="search_for_specialty_doctor_hospital">Search for specialty, doctor</string>
    <string name="send_prescription">Send\nPrescription</string>
    <string name="pharmacy_assistant">Pharmacy Assistant</string>
    <string name="search_for_medicine">Search for medicine</string>
    <string name="date">Date:</string>
    <string name="how_can_we_help_you_today">How can we help you today?</string>
    <string name="written_prescription">Written prescription</string>
    <string name="qr_code_prescription">QR code prescription</string>
    <string name="latest_lab_analysis">Latest Lab analysis:</string>
    <string name="lateset_x_ray_analysis">Latest X-ray analysis:</string>
    <string name="latest_medical_report">Latest medical report:</string>
    <string name="analysis">Analysis</string>
    <string name="precription">Precription:</string>
    <string name="examinations2">Examinations:</string>
    <string name="medical_report">Medical report:</string>
    <string name="menu">Menu</string>
    <string name="account">Account</string>
    <string name="doctors">Doctors</string>
    <string name="activity">Activity</string>
    <string name="analysis2">Analysis</string>
    <string name="medical_history">Medical History</string>
    <string name="first_aid_instructions">First-aid Instructions</string>
    <string name="bill">Bill</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text">text</string>
    <string name="hello">Hello,</string>
    <string name="loginuline"><u>Login</u></string>
    <string name="registeruline"><u>Register</u></string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="name2">Name:</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="phone">Phone Number</string>
    <string name="phone2">Phone Number:</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="welcome_to">Welcome to,</string>
    <string name="create_account">Create Account</string>
    <string name="exisiting_account">Exisiting Account</string>
    <string name="waiting_time_45_minutes">Waiting time: 45 minutes</string>
    <string name="dr1">Dr.Khaled Selim</string>
    <string name="dr2">Dr.Mohamed Ashraf</string>
    <string name="dr3">Dr.Samir Aly</string>
    <string name="dr4">Dr.Ahmed Ibrahim</string>
    <string name="med1">AUGMENTIN 1GM 14 TAB</string>
    <string name="med2">PANADOL COLD &amp; FLU 24 TAB</string>
    <string name="med3">COMETREX ACUTE HEAD COLD 20 TAB</string>
    <string name="p1">Price: 90.00EG</string>
    <string name="p2">Price: 30.00EG</string>
    <string name="p3">Price: 20.00EG</string>
    <string name="cancel">Cancel</string>
    <string name="last_visit_1">Last visit: 13/03/2023</string>
    <string name="last_visit_2">Last visit: 15/03/2023</string>
    <string name="next_visit_1">Next visit: 13/05/2023</string>
    <string name="next_visit_2">Next visit: 15/05/2023</string>
    <string name="fees1">Fees: 400EGP</string>
    <string name="fees2">Fees: 300EGP</string>
    <string name="specialty1">Specialty: Dentist</string>
    <string name="specialty2">Specialty: Dermatologist</string>
    <string name="date1">Date: 13/03/2023</string>
    <string name="date2">Date: 15/03/2023</string>
    <string name="day1">Performed on : 13/03/2023</string>
    <string name="day2">Performed on: 15/03/2023</string>
    <string name="typerad1">Type: Bone X-ray</string>
    <string name="typerad2">Type: Chest X-ray</string>
    <string name="typeana1">Type: Blood test</string>
    <string name="typeana2">Type: Urinalysis</string>
    <string name="typesur1">Type: Orthopedic surgery</string>
    <string name="typesur2">Type: Heart surgery</string>
    <string name="id">ID</string>
    <string name="edit">Edit</string>
    <string name="booking">Booking</string>
    <string name="about_doctor">About doctor:</string>
    <string name="book">Book</string>
    <string name="app6">Thursday\n23/03\n8:00PM\nto\n10:00PM</string>
    <string name="app5">Sunday\n21/03\n8:00PM\nto\n10:00PM</string>
    <string name="app4">Sunday\n19/03\n8:00PM\nto\n10:00PM</string>
    <string name="app3">Thursday\n16/03\n8:00PM\nto\n10:00PM</string>
    <string name="app2">Tuesday\n14/03\n8:00PM\nto\n10:00PM</string>
    <string name="app1">Sunday\n12/03\n8:00PM\nto\n10:00PM</string>
    <string name="specialty_dentist">Specialty: Dentist</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm">Confirm</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="ask">Have a medical question? Ask\na doctor now for free and get\na response in 24h.</string>
    <string name="ask_now">Ask now</string>
    <string name="plasters_in_a_variety_of_different_sizes_and_shapes">- Plasters in a variety of different sizes and shapes.</string>
    <string name="lesson1_first_aid_kit_components">Lesson1: First Aid Kit components</string>
    <string name="small_meduim_large_strellie_gauze_dressings">- Small , medium , large sterile gauze dressings.</string>
    <string name="at_least_2_sterile_eye_dressings">- At least 2 sterile eye dressings.</string>
    <string name="triangular_bandages">- Triangular bandages.</string>
    <string name="crepe_rolled_bandages">- Crepe rolled bandages.</string>
    <string name="safety_pins">- Safety pins.</string>
    <string name="tweezers">- Tweezers.</string>
    <string name="scissors">- Scissors.</string>
    <string name="sticky_tape">- Sticky Tape.</string>
    <string name="disposable_sterile_gloves">- Disposable sterile gloves.</string>
    <string name="alcohol_free_cleansing_wipes">- Alcohol- free cleansing wipes.</string>
    <string name="thermometer_preferably_digital">- Thermometer (preferably digital).</string>
    <string name="skin_rash_cream_such_as_hydrocortisone_or_calendula">- Skin rash cream , such as hydrocortisone or calendula.</string>
    <string name="cream_or_spray_to_relive_insect_bites_and_stings">- Cream or spray to relive insect bites and stings.</string>
    <string name="antiseptic_cream_spray">- Antiseptic cream / spray.</string>
    <string name="painkillers_such_as_paracetamol_or_infant_paracetamol_for_children_asprin_not_to_be_given_to_children_under_16_or_ibuprofin">- Painkillers such as paracetamol (or infant paracetamol for children) ,aspirin (not to be given to children under 16), or ibuprofen.</string>
    <string name="antihistamine_cream_or_tables">- Antihistamine cream or tables</string>
    <string name="distilled_water_for_cleaning_wounds">- Distilled water for cleaning wounds.</string>
    <string name="eye_wash_and_eye_bath">- Eye wash and eye bath.</string>
    <string name="done">Done</string>
    <string name="lab_analysis">Lab analysis</string>
    <string name="radiations">Radiations</string>
    <string name="surgeries">Surgeries</string>
    <string name="medicines">Medicines</string>
    <string name="check_your">Check your:</string>
    <string name="not_feeling_good_we_are_here_to_help_just_take_the_medical_assessment">Not feeling good?\nWe are here to help,\nJust take the medical\nassessment.</string>
    <string name="welcome_to_hospi">Welcome to Hospi!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="price_99_00eg">Price: 99.00EG</string>
    <string name="type_tablet">Type: Tablet</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="available">Available</string>
    <string name="mt1">Tablets/Capsules</string>
    <string name="mt2">Liquid</string>
    <string name="mt3">Drops</string>
    <string name="mt4">Inhalers</string>
    <string name="mt5">Injections</string>
    <string name="mt6">Creams &amp; Ointments</string>
    <string name="mt7">Suppositories</string>
    <string name="mt8">Patches</string>
    <string name="sp1">Dermatology</string>
    <string name="sp2">Dentistry</string>
    <string name="sp3">Psychiatry &amp; Neurology</string>
    <string name="sp4">Pediatrics &amp; New born</string>
    <string name="sp5">Cardiology &amp; Vascular diseases</string>
    <string name="sp6">Orthopedics</string>
    <string name="sp7">Gynaecology &amp; Infertility</string>
    <string name="sp8">Ear, Nose &amp; Throat</string>
    <string name="sp9">Allergy &amp; Immunology</string>
    <string name="an1">Blood Count Test</string>
    <string name="an2">Genetic Test</string>
    <string name="an3">Kidney Test</string>
    <string name="an4">Laboratory Tests</string>
    <string name="an5">Prenatal Test</string>
    <string name="an6">Urinalysis</string>
    <string name="rad1">Abdominal x-ray</string>
    <string name="rad2">Bone x-ray</string>
    <string name="rad3">Chest x-ray</string>
    <string name="rad4">Dental x-ray</string>
    <string name="rad5">Joint x-ray</string>
    <string name="rad6">Skull x-ray</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="diagnosis_report"><u>Diagnosis report:</u></string>
    <string name="chronic">Chronic:</string>
    <string name="chronic1">Chronic</string>
    <string name="chronic2">Not chronic</string>
    <string name="active">Active</string>
    <string name="active2">Not active</string>
    <string name="diagnosis1">Diagnosis: High blood pressure</string>
    <string name="diagnosis2">Diagnosis: FLU</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="_19_4_2023">19/4/2023</string>
    <string name="medical_report_documentaion">Medical report\ndocumentation:</string>
    <string name="yes">Yes</string>
    <string name="diagnose_date">Diagnose date:</string>
    <string name="active1">Active:</string>
    <string name="doctor_name">Doctor Name:</string>
    <string name="prescription_qr_code">Prescription QR code:</string>
    <string name="prescription_image">Prescription image:</string>
    <string name="high_blood_pressure">High blood pressure</string>
    <string name="diagnose_description">Diagnose description:</string>
</resources>