<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bachgroung">

        <TextView
            android:id="@+id/textView39"
            android:layout_width="260dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="65dp"
            android:text="@string/medical_report_documentaion"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:fontFamily="@font/montserrat_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView44"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back"
            android:fontFamily="@font/montserrat"
            android:paddingStart="25dp"
            android:paddingTop="12dp"
            android:text="@string/_19_4_2023"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView35"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back"
            android:fontFamily="@font/montserrat"
            android:paddingStart="25dp"
            android:paddingTop="12dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView37"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView40"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back"
            android:fontFamily="@font/montserrat"
            android:paddingStart="25dp"
            android:paddingTop="12dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView41"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back"
            android:fontFamily="@font/montserrat"
            android:paddingStart="25dp"
            android:paddingTop="12dp"
            android:text="@string/dr1"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView42"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/diagnose_date"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView34" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/chronic"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <TextView
            android:id="@+id/textView41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/active1"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

        <TextView
            android:id="@+id/textView42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/doctor_name"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView40" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:scaleType="fitXY"
            android:src="@drawable/normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/diagnosis"
            android:textColor="#1433A4"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.504" />

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="44dp"
            android:layout_marginEnd="311dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/arrow"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/diagnose_description"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />


        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="42dp"
            android:text="@string/prescription_qr_code"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView43" />

        <TextView
            android:id="@+id/textView44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/prescription_image"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:fontFamily="@font/montserrat_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView33" />

        <TextView
            android:id="@+id/textView34"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/back"
            android:fontFamily="@font/montserrat"
            android:paddingStart="25dp"
            android:paddingTop="12dp"
            android:text="@string/high_blood_pressure"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28"
            tools:ignore="RtlSymmetry,TextSizeCheck" />

        <ImageButton
            android:id="@+id/imageView24"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/emptybtn"
            android:scaleType="fitCenter"
            android:src="@drawable/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView43"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageView27"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/emptybtn"
            android:scaleType="fitCenter"
            android:src="@drawable/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView24"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAccessibility="no" />

        <ImageButton
            android:id="@+id/imageView30"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/emptybtn"
            android:scaleType="fitCenter"
            android:src="@drawable/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView27"
            tools:ignore="SpeakableTextPresentCheck"
            android:importantForAccessibility="no" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>